--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
   "scripts": {
     "webpack": "webpack",
     "http-server": "http-server",
-    "dev": "concurrently \"npm run http-server\" \"npm run webpack -- --watch\""
+    "dev": "concurrently \"npm run http-server\" \"npm run webpack -- --watch\"",
+    "lint": "eslint src"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^8.57.0",
     "@types/three": "^0.164.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.3.0",
     "http-server": "^14.1.1",
+    "prettier-eslint": "^16.3.0",
     "ts-loader": "^9.5.1",
+    "typescript-eslint": "^7.11.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
